--- a/meta tags.html
+++ b/meta tags.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html> 
+<!-- <!DOCTYPE html > SO The doc type tells the browser what type of document it is -->
+<!-- meta tags are use to describe a page content and they don't appear in the body 
+ of the web page , it only describe some stuffs about the page -->
+<!-- Attributes describes properties of the tag   -->
 <html lang="en"> 
     <!-- lang="en"attribute only describe the language is english -->
 <head>
