My Third Commit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Headings -->
    <h1> Hello world </h1>
    <h2> Hello world </h2>
    <h3> Hello world </h3>
    <h4> Hello world </h4>
    <h5> Hello world </h5>
    <h6> Hello world </h6>
+
+   <!-- paragraph -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Cupiditate deserunt velit a </strong> exercitationem nulla, neque debitis molestiae at excepturi ea  <em>laudantium numquam recusandae beatae amet quasi cumque esse repellat dolor sapiente temporibus corrupti porro animi! Suscipit, molestiae</em> inventore. Iste, nesciunt quo qui reiciendis itaque nam nisi amet accusantium sint voluptatibus beatae? Itaque totam vel aliquam, eveniet voluptates quod dolores, atque maxime deserunt 
+        <!-- Line break -->
+        <br>
+        <br>
+         aliquid molestias, maiores excepturi illum? <b>Dolores quia, minima a</b> praesentium <del>sapiente et </del>delectus nam sequi voluptatibus similique incidunt sint 
+         nesciunt numquam consequuntur qui.
+          <!-- horizontal line -->
+         <hr> 
+         Temporibus minus nemo, cupiditate dicta nulla quo magnam, assumenda architecto beatae aperiam, ex sequi quos?</p>
 </body>
 </html>
