--- a/index.html
+++ b/index.html
@@ -45,5 +45,71 @@
 
        <!-- Remote Image -->
         <img src="https://images.unsplash.com/photo-1554331808-4e46e8ee8041?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c291cmNlc3xlbnwwfHwwfHx8MA%3D%3D" alt="My Image 2">
+
+        <!-- lists and Tables -->
+
+        <!-- unordered_list -->
+         <ul >
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+         </ul>
+
+          <!-- ordered_list -->
+          <ol type="i">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+         </ol>
+
+          <!-- nested_list -->
+          <ul >
+            <li>item 1</li>
+            <li>item 2
+                <ul>
+                    <li> Nested item 1</li>
+                    <li> Nested item 2</li>
+                </ul>
+            </li>
+            <li>item 3</li>
+            <li>item 4</li>
+         </ul>
+
+         <!-- tables -->
+
+         <table>
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>last Name</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td> Habeebah</td>
+                    <td> Doe</td>
+                    <td> jdoe@gmail.com</td>
+
+                </tr>
+
+                <tr>
+                    <td> smith</td>
+                    <td> Doe</td>
+                    <td> jdoe@gmail.com</td>
+
+                </tr>
+
+                <tr>
+                    <td> kate</td>
+                    <td> Doe</td>
+                    <td> jdoe@gmail.com</td>
+
+                </tr>
+            </tbody>
+         </table>
 </body>
 </html>
