My Fourth Commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <hr> 
          Temporibus minus nemo, cupiditate dicta nulla quo magnam, assumenda architecto beatae aperiam, ex sequi quos?</p>
 
-         <!-- Links & images -->
+<!-- Links & images -->
           <p>
               <a href="http://google.com"> click for google</a>
           </p>
@@ -46,7 +46,7 @@
        <!-- Remote Image -->
         <img src="https://images.unsplash.com/photo-1554331808-4e46e8ee8041?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c291cmNlc3xlbnwwfHwwfHx8MA%3D%3D" alt="My Image 2">
 
-        <!-- lists and Tables -->
+<!-- lists and Tables -->
 
         <!-- unordered_list -->
          <ul >
@@ -111,5 +111,8 @@
                 </tr>
             </tbody>
          </table>
+
+ <!-- Forms and Inputs -->
+     
 </body>
 </html>
