div & span , classes and id

--- a/Block and Inline.html
+++ b/Block and Inline.html
@@ -6,7 +6,7 @@
     <title>Block and Inline level Element</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur labore error quas, nihil quia ipsam quasi iure facilis architecto, eaque impedit sapiente illo voluptate molestiae quibusdam sint aliquam, a rem minima commodi! Odio consectetur facere fugiat voluptatibus quod praesentium, vero debitis saepe quidem, aliquam reprehenderit ratione in quo fuga vel!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur labore error quas, nihil quia <strong>ipsam quasi iure facilis architecto, eaque impedit sapiente illo voluptate molestiae quibusdam sint aliquam, a rem minima commodi! Odio</strong>  consectetur facere fugiat voluptatibus <em>quod praesentium, vero debitis saepe quidem,</em> aliquam reprehenderit ratione in quo fuga vel!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime in alias necessitatibus ea mollitia ullam quasi optio, reiciendis molestiae odio!</p>
 
     <a href=""> A link</a>
