tutorial on div , span , classes and id

--- a/div & span , classes & id.html
+++ b/div & span , classes & id.html
@@ -6,6 +6,29 @@
     <title>Div & span , Classes and Id</title>
 </head>
 <body>
-    
+   <div id="main-header">
+     <h1>My Website</h1>
+     <p>A site about me</p>
+   </div> 
+   <ul id="main-nav">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+   </ul>
+<div id="about">
+    <h3>About</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quam nulla quae iure dolorem velit quidem, repellendus exercitationem labore pariatur?</p>
+</div>
+<div id="contact">
+    <h3>Contact me</h3>
+    <ul>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+    </ul>
+</div>
+<div id="footer">
+    <p>copyright &copy; 2019</p>
+</div>
 </body>
 </html>
